added log in/out functionality and hashed passwords

--- a/boostan/templates/home.html
+++ b/boostan/templates/home.html
@@ -7,7 +7,7 @@
         <div class="col-md-5 p-lg-5 mx-auto my-5">
             <h1 class="display-4 font-weight-normal">Boostan</h1>
             <p class="lead font-weight-normal">nothing</p>
-            <a class="btn btn-primary" href={{ url_for('sign_in')}}>Sign In</a>
+            <a class="btn btn-primary" href={{ url_for('login_page')}}>Login</a>
         </div>
         <div class="product-device box-shadow d-none d-md-block"></div>
         <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
