--- a/boostan/templates/base.html
+++ b/boostan/templates/base.html
@@ -19,19 +19,37 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+          {% if session['loggedin'] %}
           <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href={{url_for('user_detail')}}>Home <span class="sr-only">(current)</span></a>
               </li>
           </ul>
+          
+          <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link">Welcome, {{ session['username'] }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href={{ url_for('logout_page')}}>Log Out</a>
+            </li>
+          </ul>
+          {% else %}
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href={{url_for('home_page')}}>Home <span class="sr-only">(current)</span></a>
+            </li>
+        </ul>
+        
           <ul class="navbar-nav">
               <li class="nav-item">
-                  <a class="nav-link" href="#">Login</a>
+                  <a class="nav-link" href={{url_for('login_page')}}>Login</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#">Sign Up</a>
+                  <a class="nav-link" href={{ url_for('signup_page')}}>Sign Up</a>
               </li>
           </ul>
+          {%endif%}
         </div>
       </nav>
       {% with messages = get_flashed_messages(with_categories=true) %}
