--- a/boostan/templates/user_detail.html
+++ b/boostan/templates/user_detail.html
@@ -1,1 +1,8 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% block title %}
+    {{session['username']}}'s page
+{% endblock %}
+
+{% block content %}
+
+{% endblock %}
