--- a/boostan/templates/base.html
+++ b/boostan/templates/base.html
@@ -22,8 +22,14 @@
           {% if session['loggedin'] %}
           <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                  <a class="nav-link" href={{url_for('user_detail')}}>Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href={{url_for('admin_user_home')}}>Home <span class="sr-only">(current)</span></a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" href={{url_for('user_list')}}>Users</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href={{url_for('subject_list')}}>Subjects</a>
+            </li>
           </ul>
           
           <ul class="navbar-nav">
