--- a/boostan/templates/subject_list.html
+++ b/boostan/templates/subject_list.html
@@ -63,7 +63,7 @@
                                <label>Name:</label>
                                 <input type="hidden"  name="id" value="{{subject.ID}}">
              
-                               <input type="text" class="form-control" name="name" value="{{subject.name}}">
+                               <input type="text" class="form-control" name="name" value="{{subject.name}}" required="1">
              
              
                             </div>
