--- a/boostan/templates/base.html
+++ b/boostan/templates/base.html
@@ -34,8 +34,11 @@
           
           <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link">Welcome, {{ session['username'] }}</a>
+                <a class="nav-link"> Welcome, {{ session['username'] }} </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href={{url_for('user_detail', id=session["ID"])}}>Your Profile</a>
+          </li>
             <li class="nav-item">
                 <a class="nav-link" href={{ url_for('logout_page')}}>Log Out</a>
             </li>
