fixed a minor bug

--- a/boostan/templates/user_list.html
+++ b/boostan/templates/user_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    {{session['username']}}'s page
+users
 {% endblock %}
 {%block content%}
 <div style="margin-top:20px; margin-left:20px">
